Fix invisible font issue

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -4,6 +4,7 @@
   font-family: "dekiru";
   src: url("../assets/fonts/Dekiru.ttf") format("truetype");
   font-weight: normal;
+  font-display: swap;
   font-style: normal;
 }
 
